--- a/52_js/part1/26-2_짝홀.html
+++ b/52_js/part1/26-2_짝홀.html
@@ -25,6 +25,18 @@
         */
 
         // 20부터 10까지의 숫자 중 짝수일 경우 파란색, 홀수일 경우 빨간색으로 출력
+        var i = 20;
+
+        while (i >= 10) {
+            if (i % 2 === 0) {
+                //짝수
+                document.write('<p class="blue">' + i + '</p>');
+            } else {
+                //홀수
+                document.write('<p class="red">' + i + '</p>');  
+            }
+            i--;
+        }
 
 
         document.write('==== The End ====');
