--- a/52_js/part1/27_do_while.html
+++ b/52_js/part1/27_do_while.html
@@ -16,6 +16,8 @@
     <h1>do while</h1>
     <script>
         /* 
+            // do ~ while 문은 코드가 한 번은 실행된다.
+            
             var 변수 = 초깃값;
 
             do {
