--- a/52_js/part1/28_for.html
+++ b/52_js/part1/28_for.html
@@ -21,8 +21,15 @@
             }
         */
 
+        var a = 1;
+        while (a <= 10) {
+            document.write('반복' + a, '<br>');
+            a++;
+        }
+
+        // 초기식 -> 조건식 -> {코드실행} -> 증감식 -> 조건식이 만족할때까지 계속 실행
         for (var i = 1; i <= 10; i++) {
-            document.write('반복' + i, '<br>');
+            document.write('for반복' + i, '<br>');
         }
 
     </script>
