--- a/52_js/part2/42-1_아이디와비밀번호확인.html
+++ b/52_js/part2/42-1_아이디와비밀번호확인.html
@@ -12,6 +12,8 @@
     <h1>함수</h1>
     <script>
         /* 
+            함수의 용도? 재사용!~
+
             함수 정의
                 function 함수명(매개변수1, 매개변수2, ...) {
                     코드;
