--- a/52_js/part2/42_function(para).html
+++ b/52_js/part2/42_function(para).html
@@ -21,6 +21,14 @@
                 함수명(데이터1, 데이터2, ...);
         */
 
+        function add(a, b) {
+            let sum = a + b;
+            document.write(sum);
+        }
+
+        add(7, 2);
+
+
 
     </script>
 </body>
