--- a/52_js/part1/31-1_구구단.html
+++ b/52_js/part1/31-1_구구단.html
@@ -20,6 +20,7 @@
         */
 
         /* 
+            출력 형식:
             2 x 1 = 2
             2 x 2 = 4
             2 x 3 = 6
@@ -28,7 +29,14 @@
         */
 
         // 중첩 for문을 사용하여 1 ~ 3단까지 구구단을 출력해 보세요.
+        // i, j, k, ...
 
+        for (let i = 1; i <= 3; i++) {
+            for (let j = 1; j <= 9; j++) {
+                document.write(i + 'x' + j + '=' + i * j, '<br>');
+            }
+            document.write('<br>');
+        }
 
 
     </script>
