--- a/52_js/part2/41_function.html
+++ b/52_js/part2/41_function.html
@@ -12,14 +12,49 @@
     <h1>함수</h1>
     <script>
         /* 
+            식별자(변수, 함수)의 이름
+            1. 첫 글자는 영문자, _, $
+            2. 두 번째 글자부터 영문자, _, $, 숫자
+            3. 영문의 대소문자 구별
+            4. 카멜표기법
+
             변수(variables)
              - 1개의 데이터를 저장
-             - var 키워드를 이용하여 선언
+             - var, let, const 키워드를 이용하여 선언
              - 문자형, 숫자형, 논리형 데이터 보관
+
+            //변수 선언 및 값 할당
+            var 변수명 = 값;
+            //출력
+            document.write(변수명);
+
+            //문장 형식:
+            객체.메서드();
+            객체.속성;
+
+            document.write(매개변수);
+            window.alert(매개변수);
+
+            내장 함수        
+            alert(매개변수);
+            Number('10') -> 10
+            String(10) -> '10'
+            Boolean(10) -> true
+
+            나는.공부한다;
+
+            //함수 선언
+            function 함수명(매개변수1, ...){
+                코드;
+            }
+
+            //함수 호출 -> 실행
+            함수명();
 
             함수(function)
              - 코드를 저장하고 데이터를 반환
              - function 키워드를 이용하여 선언
+             - 함수 끝에 ;은 생략한다.
 
 
             함수 정의
@@ -41,8 +76,31 @@
             호이스팅(hoisting)?
                 - 자바스크립트 해석기가 변수와 함수의 메모리 공간을 선언 전에 미리 할당하는 것
 
+            var호이스팅 되지만, let, const는 호이스팅되지 않는다.
             일반 함수의 경우 함수 정의 전에 함수 호출문이 있어도 호이스팅(hoisting) 방식이 적용되어 실행되지만 익명 함수는 적용되지 않는다.
         */
+             // 호이스팅
+             // document.write(a, '<br>');
+             // var a;
+
+
+
+        myFn();
+
+        // 함수 정의
+        function myFn(){
+            document.write('hello1<br><br>');
+        }
+
+        // 익명 함수 ~ 함수명이 없다.
+        let myFn2 = function (){
+            document.write('hello2<br>');
+        }
+
+        // 함수 호출
+        // myFn();
+        myFn2();
+        
 
 
 
