--- a/52_js/part2/43_return.html
+++ b/52_js/part2/43_return.html
@@ -24,6 +24,15 @@
                 var 변수 = 함수명();
         */
 
+        function myFn(a, b) {
+            document.write(a + b, '<br>');
+            return a / b;
+            document.write(a * b, '<br>');
+        }
+
+        var result = myFn(1, 2);
+        document.write(result);
+
 
     </script>
 </body>
