--- a/52_js/part2/43-1_이미지갤러리2.html
+++ b/52_js/part2/43-1_이미지갤러리2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>이미지 갤러리</h1>
+    <h1>이미지 갤러리(롤링)</h1>
     <div id="galleryZone">
         <p>           
             <!-- 인라인 스크립트 -->
@@ -19,41 +19,22 @@
         <p><img src="../assets/pic_1.jpg" alt="" id="photo"></p>
     </div>
     <script>
-        /* 
-            HTML의 이벤트 속성: onclick
-
-            return: 함수 호출문에 결괏값 반환하고 함수 종료
-
-            함수 정의
-                function 함수명() {
-                    코드;
-                    return 데이터(값);
-                }
-
-            함수 호출
-                var 변수 = 함수명();
-        */
-
+        
         var num = 1;
         function gallery(direct) {
             if (direct) {
-                if (num == 8) return;
+                if (num == 8) num = 0;
                 num++;
+                // console.log(num);
             } else {
-                if (num == 1) return;
+                if (num == 1) num = 9;
                 num--;
+                // console.log(num);
             }
 
             var imgTag = document.getElementById('photo');
             imgTag.setAttribute('src', '../assets/pic_' + num + '.jpg');
         }
-
-        /* 
-            객체.메서드();
-            document.write();
-            document.getElementById('아이디명'); ~ 문서에 아이디명에 해당하는 요소를 가져온다.
-            객체.setAttribute('속성', '값'); ~ 객체의 HTML의 속성을 값으로 설정한다.
-        */
     </script>
 </body>
 
