--- a/52_js/part2/51_object.html
+++ b/52_js/part2/51_object.html
@@ -14,15 +14,30 @@
         /* 
             현실 세계
             TV -> 객체
-            켜다, 끄다, 볼륨을 높이다, 볼륨을 낮추다 -> 메서드
-            너비, 높이, 색상, 무게의 특징 -> 속성
+            기능 : 켜다, 끄다, 볼륨을 높이다, 볼륨을 낮추다 -> 메서드
+            특징 : 너비, 높이, 색상, 무게의 특징 -> 속성
+
+            TV를 켜다.
+            TV의 너비.
+            TV의 너비가 100cm.
+
+            TV.켜다();
+            TV.너비;
+            TV.너비 = 100cm;
 
             자바스크립트는 객체(object) 기반 언어이다.
             객체는 기능(메서드)과 속성을 가지고 있다.
 
             객체.메서드() -> 객체의 메서드를 실행한다.
+            prompt();
+            document.write();
+            document.getElementById(); -> 아이디에 의해서 요소를 가져온다.
+            객체.setAttribute(); -> 괄호안의 속성을 설정한다.
+            location.reload(); 브라우저 새로고침
             객체.속성 -> 객체의 속성값을 가져온다.
+            location.href
             객체.속성 = 값 -> 객체의 속성값을 바꾼다.
+            location.href = 'https://naver.com';
 
             객체의 종류
             1. 내장 객체(Built-in Object)
@@ -30,7 +45,7 @@
                 - Date, Array, Math, String 등
             2. 브라우저 객체 모델(BOM, Browser Object Model)
                 - 브라우저에 계층 구조로 내장되어 있는 객체
-                - window, screen, location, history, navigator 등
+                - window, document(DOM), screen, location, history, navigator 
             3. 문서 객체 모델(DOM, Document Object Model)
                 - HTML 문서 구조
         */
