--- a/52_js/part2/52-1_연말까지남은일수.html
+++ b/52_js/part2/52-1_연말까지남은일수.html
@@ -21,6 +21,14 @@
             Math.ceil(숫자): 소수점 첫째 자리에서 올림하여 정수 반환
         */
 
+        // 현재 날짜와 시간
+        let d = new Date();
+        document.write(d.getTime(), '<br>');
+        // 특정 날짜와 시간
+        let d2 = new Date(2000, 0, 25);
+        document.write(d2, '<br>');
+
+
         // 현재 날짜부터 연말까지 남은 일 수
         // 남은 일 수(밀리초) = 특정 날짜 밀리초 - 현재 날짜 밀리초
 
