--- a/90_test/웹퍼블리싱_유은미/패스트프로토타입_유은미.html
+++ b/90_test/웹퍼블리싱_유은미/패스트프로토타입_유은미.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>슬라이드_유은미</title>
+    <title>패스트프로토타입_유은미</title>
     <style>
-        /* 레이아웃과 배경색 */
-        * {margin: 0; padding: 0;}
+        /* 초기화 */       
+        * {margin: 0 auto; padding: 0;}
         img {width: 100%; vertical-align: top;}
-        a {text-decoration: none; color: #333;}
+        a {text-decoration: none; color: #333;}        
 
-        .wrap {width: 1000px;}
+         /* 레이아웃과 배경색 */
+        body { background: #fff; color: #333;}
+        .wrap {width: 100%;}
         header {height: 100px; background:#ccc;}
         section {
             position: relative;
             height: 500px; 
             overflow: hidden;
         }
-        footer {height: 100px; background: #555;}
+        footer {height: 100px; background: #999;}
 
         /* 로고 */
        .logo {text-align:center; line-height: 100px;}
@@ -34,6 +36,9 @@
         text-shadow: 1px 1px 5px #000;
     }
 
+        /* 푸터 */
+        .copy {text-align:center; line-height: 100px;}
+
         /* 슬라이드 */
         ul {
             position: absolute;
@@ -43,7 +48,7 @@
             animation: slide 3s infinite;
         }
         li {
-            width: 1000px;
+            width: 100%;
             height: 500px;
             overflow: hidden;
         }
@@ -64,20 +69,20 @@
     <div class="wrap">
         <!-- 헤더 -->
         <header>
-            <h1 class="logo"><a href="#">이탈리아</a></h1>
+            <h1 class="logo"><a href="#">으뜸요리 </a></h1>
         </header>
         <!-- 섹션 -->
         <section>
-            <h2>메인 타이틀</h2>
+            <h2>요리를 부탁해! 으뜸요리학원</h2>
             <ul>
-                <li><img src="img/slide1.jpg" alt=""></li>
-                <li><img src="img/slide2.jpg" alt=""></li>
-                <li><img src="img/slide3.jpg" alt=""></li>
-                <li><img src="img/slide1.jpg" alt=""></li>
+                <li><img src="images/slide1.jpg" alt=""></li>
+                <li><img src="images/slide2.jpg" alt=""></li>
+                <li><img src="images/slide3.jpg" alt=""></li>
+                <li><img src="images/slide1.jpg" alt=""></li>
             </ul>
         </section>
         <!-- 푸터 -->
-        <footer>Copyright 2023 이탈리아. All rights reserved.</footer>
+        <footer class="copy">Copyright 2023 이탈리아. All rights reserved.</footer>
     </div>    
 </body>
 </html>
