--- a/90_test/웹퍼블리싱_유은미/ui제작하기_유은미.html
+++ b/90_test/웹퍼블리싱_유은미/ui제작하기_유은미.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,21 @@
     <title>슬라이드_유은미</title>
     <style>
         /* 초기화 */
-        * {margin: 0; padding: 0;}
-        img {width: 100%; vertical-align: top;}      
-       
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        img {
+            width: 100%;
+            vertical-align: top;
+        }
+
         section {
             position: relative;
-            height: 500px; 
+            height: 500px;
             overflow: hidden;
-        }     
+        }
 
         /* 슬라이드 */
         ul {
@@ -24,6 +32,7 @@
             height: 500%;
             animation: slide 3s infinite;
         }
+
         li {
             width: 100%;
             height: 500px;
@@ -31,25 +40,38 @@
         }
 
         @keyframes slide {
-            0% {top:0;}
-            5% {top:-100%;}
-            33% {top:-100%;}
-            38% {top:-200%;}
-            66% {top:-200%;}
-            71% {top:-300%;}
-            99.99% {top:-300%;}
-            100% {top:0;}
+            0% {
+                top: 0;
+            }
+
+            33% {
+                top: -100%;
+            }
+
+            66% {
+                top: -200%;
+            }
+
+            99.99% {
+                top: -300%;
+            }
+
+            100% {
+                top: 0;
+            }
         }
     </style>
 </head>
+
 <body>
     <section>
-    <ul>
-        <li><img src="images/slide1.jpg" alt=""></li>
-        <li><img src="images/slide2.jpg" alt=""></li>
-        <li><img src="images/slide3.jpg" alt=""></li>
-        <li><img src="images/slide1.jpg" alt=""></li>
-    </ul>
+        <ul>
+            <li><img src="images/slide1.jpg" alt=""></li>
+            <li><img src="images/slide2.jpg" alt=""></li>
+            <li><img src="images/slide3.jpg" alt=""></li>
+            <li><img src="images/slide1.jpg" alt=""></li>
+        </ul>
     </section>
 </body>
+
 </html>
