--- a/90_test/웹퍼블리싱_유은미/ui제작하기_유은미.html
+++ b/90_test/웹퍼블리싱_유은미/ui제작하기_유은미.html
@@ -41,23 +41,23 @@
 
         @keyframes slide {
             0% {
-                top: 0;
+                left: 0;
             }
 
             33% {
-                top: -100%;
+                left: -100%;
             }
 
             66% {
-                top: -200%;
+                left: -200%;
             }
 
             99.99% {
-                top: -300%;
+                left: -300%;
             }
 
             100% {
-                top: 0;
+                left: 0;
             }
         }
     </style>
