--- a/52_js/part2/54-2_Array.html
+++ b/52_js/part2/54-2_Array.html
@@ -22,6 +22,17 @@
         var greenArr = ['교대', '방배', '강남'];
         var yellowArr = ['미금', '정자', '수서'];
 
+        document.write(greenArr.splice(0, 2, '서초', '역삼', '압구정'), '<br>');
+        document.write(greenArr, '<br>');
+        document.write(yellowArr.pop(), '<br>');
+        document.write(yellowArr, '<br>');
+        document.write(yellowArr.shift(), '<br>');
+        document.write(yellowArr, '<br>');
+        document.write(yellowArr.push('미금'), '<br>');
+        document.write(yellowArr, '<br>');
+        document.write(yellowArr.unshift('수서'), '<br>');
+        document.write(yellowArr, '<br>');
+
 
 
     </script>
