--- a/52_js/part2/54-3_배경색바꾸기.html
+++ b/52_js/part2/54-3_배경색바꾸기.html
@@ -30,6 +30,7 @@
 
         function changeColor() {
             i++;
+            // color.length ~ 배열의 길이(값 개수)
             if (i >= color.length) {
                 i = 0;
             }
