--- a/52_js/part2/54_Array.html
+++ b/52_js/part2/54_Array.html
@@ -11,25 +11,42 @@
 <body>
     <h1>배열 객체</h1>
     <script>
-       /* 
-            배열? 여러 개의 데이터를 하나의 저장소에 저장
+        /* 
+             배열? 여러 개의 데이터를 하나의 저장소에 저장
+ 
+             var 참조변수 = new Array();
+                 참조변수[0] = 값1;
+                 참조변수[1] = 값2;
+                 참조변수[2] = 값3;
+                 ...
+                 참조변수[n-1] = 값n;
+ 
+             var 참조변수 = new Array(값1, 값2, 값3, ... 값n);
+             var 참조변수 = [값1, 값2, 값3, ... 값n];
+ 
+             배열 객체에 저장된 데이터 가져오기
+                 참조변수[인덱스번호];
+                 인덱스 번호는 0부터 시작
+        */
 
-            var 참조변수 = new Array();
-                참조변수[0] = 값1;
-                참조변수[1] = 값2;
-                참조변수[2] = 값3;
-                ...
-                참조변수[n-1] = 값n;
+        // 배열 생성
+        var a = new Array();
+        a[0] = 10;
+        a[1] = 20;
+        a[2] = 30;
 
-            var 참조변수 = new Array(값1, 값2, 값3, ... 값n);
-            var 참조변수 = [값1, 값2, 값3, ... 값n];
+        var a = new Array(10, 20, 30);
 
-            배열 객체에 저장된 데이터 가져오기
-                참조변수[인덱스번호];
-                인덱스 번호는 0부터 시작
-       */
+        // 배열의 색인번호(index number)
+        var a = [10, '이십', true];
 
-        
+        // 배열 값을 가져오기
+        document.write(a[0], '<br>');
+        document.write(a[1], '<br>');
+        document.write(a[2], '<br>');
+        document.write(a, '<br>');
+
+
     </script>
 </body>
 
