--- a/52_js/part2/55-2_이메일유효성검사.html
+++ b/52_js/part2/55-2_이메일유효성검사.html
@@ -22,6 +22,10 @@
         /* 
             indexOf('찾을문자'): 객체의 왼쪽부터 문자열을 찾아 최초 일치하는 index 번호 반환 (없으면 -1)            
             length: 문자열의 문자 총 개수 반환
+
+            이메일:
+            id@naver.com
+            id@google.com
         */
 
         var userEmail = prompt('당신의 이메일 주소는?', '');
