--- a/52_js/part2/55_String.html
+++ b/52_js/part2/55_String.html
@@ -43,6 +43,11 @@
 
         var str = 'Hello Thank you good luck to you';
 
+        document.write(str.indexOf('you'), '<br>');
+        document.write(str.substr(12, 3), '<br>');
+        document.write(str.toUpperCase(), '<br>');
+        document.write(str.charCodeAt(0), '<br>');
+
 
 
     </script>
