--- a/52_js/part2/62_팝업창.html
+++ b/52_js/part2/62_팝업창.html
@@ -25,6 +25,8 @@
              8. toolbars: 도구 상자 영역 숨김/표시
         */
 
+        window.open('winpopup.html', '', 'width=500, height=400');
+
 
     </script>
 </body>
