--- a/52_js/part2/53-1_가위바위보.html
+++ b/52_js/part2/53-1_가위바위보.html
@@ -17,10 +17,16 @@
             Math.ceil(숫자): 소수점 첫째 자리에서 올림한 정수 반환
        */
 
-        // 0 ~ 10 사이 난수
-        Math.random() * 10;
+        //  0 ~ 1 사이 난수
+        // 0 <=  Math.random() < 1 
+        Math.random()
 
-        // 0 ~ 30 사이 임의 정수
+        //  0 ~ 10 사이 난수
+        // 0 * 10 <=  Math.random() * 10 < 1 * 10
+        // 0 <=  Math.random() * 10 < 10
+        Math.random() * 10;
+          
+        // 0.xxx ~ 30.xxx 사이 임의 정수
         Math.floor(Math.random() * 31)
 
         // 120 ~ 150 사이 임의 정수
@@ -44,7 +50,8 @@
             location.reload();
         }
 
-        var com = Math.ceil(Math.random() * 3);
+        // 0+1, 1+1, 2+1
+        var com = Math.floor(Math.random() * 3) + 1;
         document.write('<img src=\'../assets/math_img_' + com + '.jpg\'>');
 
         if (gameNum == com) {
