--- a/52_js/part2/54-1_Array.html
+++ b/52_js/part2/54-1_Array.html
@@ -14,7 +14,7 @@
        /* 
             join(연결문자): 연결문자 기준으로 1개의 문자열 데이터로 반환
             concat(): 2개의 배열 객체를 하나로 결합하여 반환
-            sort(): 오름차순 정렬하여 반환
+            sort(): 오름차순(ㄱ,ㅌ,ㄷ,a,b,c, ...) 정렬하여 반환
             reverse(): 데이터 순서를 거꾸로 바꾼 후 반환
             slice(index1, index2): 인덱스1에서 인덱스2 이전까지 반환
        */
@@ -22,6 +22,11 @@
         var arr_1 = ['사당', '교대', '방배', '강남'];
         var arr_2 = ['신사', '압구정', '옥수'];
 
+        document.write(arr_1.join('-'), '<br>');
+        document.write(arr_1.concat(arr_2), '<br>');
+        document.write(arr_1.sort(), '<br>');
+        document.write(arr_1.reverse(), '<br>');
+        document.write(arr_1.slice(1, 3), '<br>');
 
 
     </script>
