--- a/52_js/part3/71_jq_css().html
+++ b/52_js/part3/71_jq_css().html
@@ -26,12 +26,72 @@
     <div class="box1"></div>
     <div class="box2"></div>
 
+    <!-- 실무(자사 개별 서버가 있는 경우) 또는 웹디자인 기능사 시험용 -->
+    <script src="jquery-3.7.0.min.js"></script>
+
+    <!-- 실무(주로 쓰임): CDN -->
+    <!-- 구글 CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <!-- 제이쿼리 CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <!-- cdnjs.com CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
         /* 
-            $('선택자').css({속성명: 값});
+        자바스크립트
+            1. 용어
+            2. 변수?
+            3. 데이터
+            4. 연산자
+            5. 제어문
+            6. 함수
+            7. 객체(메서드, 속성)
+                var obj = new Object();
+                var obj2 = {
+                    속성: 값,
+                    속성: 값,
+                    ...
+                    속성: 값
+                };
+            8. 이벤트
+
+        제이쿼리: 자바스크립트의 라이브러리
+            1. 이벤트
+            2. 선택자, 탐색 메서드
+            3. html/css 메서드
+                - attr(), css()
+            4. 효과 메서드
+            5. 기타 메서드
+            6. 플러그인 프로그램
+                - 캐로셀
         */
 
+        /* 
+            제이쿼리 사용법
+            1. 제이쿼리 라이브러리 파일 연결
+                - 다운로드 https://jquery.com  -> 다운로드 버튼 -> Download the compressed, production jQuery 3.7.0
+                - CDN
+            2. <head></head> 사이에 <script>를 사용할 경우 준비 이벤트가 필요!
+            3. 코드 작성 
+
+            객체.메서드();
+
+            객체: $('CSS선택자')
+            메서드: css()
+            선택자: #id, .class, 태그, ...
+            
+            $('선택자').css({속성명: 값});
+
+            css({속성: 값, 속성: 값, ...});
+            css(속성, 값)
+        */
+       /* 
+            빨간색 상자의 크기를 가로/세로 모두 300px으로 지정하시오.
+       */
+        // 문자열은 '' 또는 ""로 묶는다.
+        // 속성은 '' 또는 "" 생략 가능
+        // 값은 단위 생갹하면 기본은 px
+            $('.box2').css({width: 300, height: '300px'});
     </script>
 </body>
 
