--- a/52_js/part3/73-1_jq_mosuewheel.html
+++ b/52_js/part3/73-1_jq_mosuewheel.html
@@ -13,6 +13,7 @@
             background: #888;
             margin: 50px auto;
         }
+
         div p {
             font-size: 40px;
             color: #fff;
@@ -29,6 +30,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script>
         /* 
+         cdn 가져오기 :  https://cdnjs.com
+
             이벤트 형식:
             $('선택자').on('mousewheel', function(e, delta){
                 if (delta > 0) {
@@ -38,6 +41,34 @@
                 }
             });
         */
+
+        /* 
+            회색 박스 위에서 마우스휠(mousewheel)을 
+            위로 올렸을 때 박스의 색을 빨강으로
+            아래로 내렸을 때 박스의 색을 파랑으로
+            지정하시오.
+        */
+
+        // 예:경남아너스빌
+        /* $('div').on('mousewheel', function (e, delta) {
+            if (delta > 0) {
+                // 마우스 휠을 올렸을 때 실행할 코드
+                $('div').css({background: 'red'});
+            } else if (delta < 0) {
+                // 마우스 휠을 내렸을 때 실행할 코드
+                $('div').css({background: 'blue'});
+            }
+        }); */
+
+        $('div').mousewheel(function (e, delta) {
+            if (delta > 0) {
+                // 마우스 휠을 올렸을 때 실행할 코드
+                $('div').css({background: 'red'});
+            } else if (delta < 0) {
+                // 마우스 휠을 내렸을 때 실행할 코드
+                $('div').css({background: 'blue'});
+            }
+        });
 
     </script>
 </body>
