--- a/52_js/part3/74-5_jq_prev().html
+++ b/52_js/part3/74-5_jq_prev().html
@@ -11,16 +11,25 @@
 <body>
     <ul>
         <li>목록1</li>
-        <li>목록2</li>
+        <li class="abc">목록2</li>
         <li>목록3</li>
         <li>목록4</li>
     </ul>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
-        /* 
-            $('선택자').prev() ~ 이전 요소 선택
+        /*
+            $('선택자').prev(['선택자']) ~ 이전 형제 요소 선택
+            $('선택자').next(['선택자']) ~ 다음 형제 요소 선택
         */
+        /*
+            목록2의 이전 요소를 선택하여
+            글자색을 빨강으로 지정하고,
+            목록2의 다음 요소를 선택하여
+            글자색을 파랑으로 지정하시오.
+        */
+        $('.abc').prev().css({color: 'red'});
+        $('.abc').next().css({color: 'blue'});
 
     </script>
 </body>
