--- a/52_js/part3/75-2_jq_html().html
+++ b/52_js/part3/75-2_jq_html().html
@@ -30,6 +30,21 @@
             $('선택자').html(); ~ HTML 구조 반환
             $('선택자').html('HTML 구조'); ~ HTML 구조 설정
         */
+        /* 
+            '태그 구조 바꾸기' 버튼을 클릭하면
+            '변경전 입니다.' 텍스트를 '변경후 입니다.'로 바꾸고,
+            버튼 아래 텍스트를 클릭하면 경고창으로 텍스트를 표시하시오.
+        */
+       // 버튼을 클릭하면
+        $('button').click(function(){
+            $('div').html('<h1>변경후 입니다.</h1>');
+        });
+        // div를 클릭하면
+        $('div').click(function(){
+            let txt = $('div').html();
+            alert(txt);
+        });
+        
 
     </script>
 </body>
