--- a/52_js/part3/75-3_jq_attr().html
+++ b/52_js/part3/75-3_jq_attr().html
@@ -30,6 +30,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
         /* 
+            이벤트 메서드
+            탐색 메서드
+            HTML/CSS 메서드
+                text()
+                html()
+                attr()
+                css()
+
+            효과 메서드 -> 내비게이션, 슬라이드 이미지
+                hide()
+                show()
+                fadeIn()
+                fadeOut()
+                slideDown()
+                slideUp()
+                animate()
+                stop()
+
+
             $('선택자').attr({속성명: 값});
         */
 
