--- a/52_js/part3/sol/76_jq_animate().html
+++ b/52_js/part3/sol/76_jq_animate().html
@@ -23,7 +23,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <script>
         /* 
-            $('선택자').animate({속성: 값}, 시간, '가속도') ~ 요소에 애니메이션 적용
+            $('선택자')에 애니메이션 적용
+
+                $('선택자').animate({속성: 값}) 
+                $('선택자').animate({속성: 값}, 시간, '가속도')
         */
 
 
