--- a/52_js/part3/sol/77-1_jq_append().html
+++ b/52_js/part3/sol/77-1_jq_append().html
@@ -18,7 +18,7 @@
             A.append(b) ~ A요소 끝에 b 삽입
         */
 
-        $('#info').append('<img src="../assets/pic_1.jpg" alt="이미지">');
+        $('#info').append('<img src="../../assets/pic_1.jpg" alt="이미지">');
     </script>
 </body>
 
