--- a/52_js/part3/76-3_jq_hide(),show(),fadeIn(),fadeOut().html
+++ b/52_js/part3/76-3_jq_hide(),show(),fadeIn(),fadeOut().html
@@ -8,46 +8,65 @@
     <title>HTML+CSS+JS</title>
     <style>
         li {
+            display: inline;
             font-size: 30px;
-            margin-left: 50px;
+            margin-left: 10px;
+            background: lightpink;
         }
         div {
-            float:left;
             width: 400px;
             height: 400px;
             margin: 50px;
             font-size: 40px;
             color: #fff;
-        }
-        .box1 {
             background: blue;
-        }
-        .box2 {
-            background: red;
-        }
+        }       
     </style>
 </head>
 
 <body>
     <ul>
-        <li>박스1 hide</li>
-        <li>박스1 show</li>
-        <li>박스2 fadeOut</li>
-        <li>박스2 fadeIn</li>
+        <li>hide: 숨기기</li>
+        <li>show: 보이기</li>
+        <li>fadeOut: 서서히 숨기기</li>
+        <li>fadeIn: 서서히 보이기</li>
+        <li>slideDown/slideUp</li>       
     </ul>
 
-    <div class="box1">박스1</div>
-    <div class="box2">박스2</div>
+    <div class="box">박스</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <script>
         /* 
+            효과 메서드
+            $('선택자').stop() ~ 이전 효과를 멈춤
+            
             $('선택자').hide() ~ 숨김
             $('선택자').show() ~ 보임
             $('선택자').fadeOut(시간) ~ 서서히 숨김
             $('선택자').fadeIn(시간) ~ 서서히 보임
+            $('선택자').slideDown(시간) ~ 위에서 아래로 서서히 나타남
+            $('선택자').slideUp(시간) ~ 아래서 위로 서서히 사라짐
         */
+       $('li').eq(0).click(function(){
+            $('div').stop().hide();
+       });
+       $('li').eq(1).click(function(){
+            $('div').stop().show();
+       });
+       $('li').eq(2).click(function(){
+            $('div').stop().fadeOut();
+       });
+       $('li').eq(3).click(function(){
+            $('div').stop().fadeIn();
+       });
+       $('li').eq(4).mouseenter(function(){
+            $('div').stop().slideDown();
+       });
+       $('li').eq(4).mouseleave(function(){
+            $('div').stop().slideUp();
+       });
 
     </script>
 </body>
