--- a/52_js/part4/81_jq_val().html
+++ b/52_js/part4/81_jq_val().html
@@ -12,6 +12,7 @@
             color: red;
             margin-left: 20px;
         }
+
         input {
             width: 100px;
             height: 50px;
@@ -19,6 +20,7 @@
             border: 1px solid #444;
             margin: 20px;
         }
+
         button {
             font-size: 40px;
         }
@@ -35,6 +37,28 @@
         /* 
             $('선택자').val() ~ input에 입력된 값 반환
         */
+       /* 
+            입력 상자에 나이를 입력하고 성인인증 버튼을 클릭하면
+            입력 상자에 입력한 나이를 가져와서 num에 저장하고
+
+            num이 19이상이면 '성인입니다.'
+            num이 19이하이면 '미성년입니다.'
+            num이 0미만이면 '다시입력해 주세요.'
+            num이 문자열이면 '다시입력해 주세요.'
+            num이 비어있으면 '입력하지 않으셨습니다.'
+       */
+        $('button').click(function(){
+            let num = $('input').val();
+            if (num === '') {
+                alert('입력하지 않으셨습니다.');
+            } else if (num >= 19) {
+                alert('성인입니다.');
+            } else if (num < 19 && num >= 0) {
+                alert('미성년입니다.');
+            } else {
+                alert('다시입력해 주세요.');
+            }
+        });
 
 
     </script>
