--- a/52_js/part4/sol/81_jq_val().html
+++ b/52_js/part4/sol/81_jq_val().html
@@ -35,7 +35,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
         /* 
-            $('선택자').val() ~ input에 입력된 값 반환
+            $('선택자').val() ~ input에 입력된 값 반환(가져옴)
+            $('선택자').val(값) ~ input에 지정한 값 설정
         */
 
 
@@ -46,10 +47,10 @@
                 alert('아무런 정보도 입력하지 않으셨습니다.');
             } else if (num >= 19) {
                 alert('당신은 성인입니다.');
-            } else if (num < 19) {
+            } else if (num < 19 && num >= 0) {
                 alert('당신은 미성년 입니다.');
             } else {
-                alert('숫자만 입력해주세요.');
+                alert('잘못 입력하셨습니다. 다시 입력해주세요.');
             }
         });
 
